test/conformance/kuttl/policy-validation/cluster-policy/admission-disabled/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: policy-validate.yaml
- file: policy-mutate.yaml
  shouldFail: true
- file: policy-generate.yaml
  shouldFail: true
- file: policy-verify-image.yaml
  shouldFail: true
