test/conformance/kuttl/policy-validation/cluster-policy/admission-disabled/policy-mutate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate
spec:
  validationFailureAction: Audit
  admission: false
  background: true
  rules:
  - name: mutate
    match:
      resources:
        kinds:
        - Pod
        - Service
        - ConfigMap
        - Secret
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            foo: bar
