test/conformance/kuttl/policy-validation/cluster-policy/admission-disabled/policy-validate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate
spec:
  validationFailureAction: Audit
  admission: false
  background: true
  rules:
  - name: validate
    match:
      any:
      - resources:
          kinds:
          - Scale
    validate:
      deny: {}
